# mpc_tracker_ros

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: mpc_tracker_param.yaml
include/cgmres_solver/: cgmres_initializer.hpp  continuation_gmres.hpp  linear_algebra.hpp  matrixfree_gmres.hpp  newton_gmres_for_ocp.hpp  optimal_control_problem.hpp  single_shooting_continuation.hpp  single_shooting_ocp.hpp  time_varying_smooth_horizon.hpp  zero_horizon_ocp.hpp
include/mpc_tracker/: CSVWriter.hpp  FrenetCoordinate.hpp  MPCCourse.hpp  Pose.hpp  StopWatch.hpp  Twist.hpp  course_manager.hpp  frenet_serret_converter.hpp  frenet_state_filter.hpp  mpc_formulation.hpp  mpc_simulator.hpp  mpc_tracker_core.hpp  state_space_order.hpp
launch/: mpc_tracker.launch
scripts/: EgoVehicle.py  TwoWDRobotState.py  gen_mpc_tracker_kinematic.py  offline_simulation.sh  plot_tool.py  requirements.txt  utils.py
scripts/autogenu/: autogenu.py
scripts/generated_c_source/MPCTracker_2WD/: MPCTracker_2WD.cpp  MPCTracker_2WD.hpp
simulation/: simulation.cpp
simulation/reference_path/: circuit_cource.csv  circuit_lane.csv  curv_90deg.csv  example_from_navigation.csv  not_const_value.csv  not_const_value_2.csv  oval_cource.csv  sinwave_05.csv  sinwave_075.csv  sinwave_1.csv  sinwave_cource.csv  step_1m.csv  step_path_01m.csv  stop_cource.csv  straight_lane.csv  straight_path2.csv  straightlane_experiment.csv
simulation/simulation_result/: result.csv
src/: course_manager.cpp  frenet_serret_converter.cpp  frenet_state_filter.cpp  mpc_formulation.cpp  mpc_simulator.cpp  mpc_tracker_core.cpp  mpc_tracker_node.cpp
src/cgmres_solver/: cgmres_initializer.cpp  continuation_gmres.cpp  linear_algebra.cpp  optimal_control_problem.cpp  single_shooting_continuation.cpp  single_shooting_ocp.cpp  time_varying_smooth_horizon.cpp  zero_horizon_ocp.cpp
